# blaze

./: Blaze.hs  Bonawitz_3_10a.hs  Bonawitz_3_10b.hs  Bonawitz_3_10c.hs  Bonawitz_3_10d.hs  Bonawitz_3_10e.hs  Bonawitz_3_13a.hs  Bonawitz_3_13b.hs  Bonawitz_3_14a.hs  Bonawitz_3_14b.hs  Bonawitz_3_16a.hs  Bonawitz_3_16b.hs  Bonawitz_3_18a.hs  Bonawitz_3_18b.hs  Bonawitz_3_19a.hs  Bonawitz_3_19b.hs  Bonawitz_3_19c.hs  Bonawitz_3_21a.hs  Bonawitz_3_21b.hs  Bonawitz_3_7.hs  Bonawitz_3_8.hs  Bonawitz_3_9.hs  Ising_a.hs  Ising_b.hs  RAE.hs  RAE_draft.hs  README.md  Tree.hs  Tree_old.hs
old/: UTree.hs
packaging/: Bonawitz_3_7.hs  LICENSE  README  blaze.cabal
packaging/Data/: BlazeTree.hs
packaging/Math/Statistics/Inference/: Blaze.hs
