Name:                blaze
Version:             0.1
Description:         Lossy implementation of Bonawitz's Blaise
License:             MIT
License-file:        LICENSE
Data-files:          README
Author:              Daniel Klein
Maintainer:          othercriteria@gmail.com
Build-depends:       base,
                     logfloat,
                     hmatrix,
                     MonadRandom
Exposed-modules:     Math.Statistics.Inference.Blaze,
                     Data.BlazeTree
Build-type:          Simple
